fixed text align

--- a/week-3/style.css
+++ b/week-3/style.css
@@ -23,6 +23,9 @@ background-image: url(https://www.designbolts.com/wp-content/uploads/2012/11/Tri
     padding: 10px 30px;
     font-size: 30px;
 }
+#password {
+    text-align: center;
+}
 .light-grey-background{
     background-color: rgb(51, 51, 51);
 }
